# misvm

./: pyproject.toml
misvm/: mi_svm.py  mica.py  quadprog.py  svm.py
