[tool.poetry]
name = "misvm"
version = "0.1.0"
description = "Implementations of various multiple-instance support vector machine approaches"
authors = ["Gary Doran <gary.doran@case.edu>"]
license = "BSD"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "^1.21.2"
scipy = "^1.7.1"
cvxopt = "^1.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
