[tool.poetry]
name = "misvm"
version = "0.2.0"
description = "Implementations of various multiple-instance support vector machine approaches"
authors = ["Gary Doran <gary.doran@case.edu>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.2"
scipy = "^1.7.1"
kvxopt = "^1.3.0.3"

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
